<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="welcome_message">Bienvenido a </string>

    <string name="nameApp"> AppInmo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmuebles">Inmuebles</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="menu_pagos">Pagos</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>


    <string name="label_nombre">Nombre</string>
    <string name="label_apellido">Apellido</string>
    <string name="label_dni">DNI</string>
    <string name="label_telefono">Telefono</string>
    <string name="label_email">Email</string>

    <string name="btn_actualizar">Actualizar</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_crear">Crear</string>
    <string name="btn_vercontrato">Ver Contrato</string>
    <string name="btn_verInquilino">Ver Inquilino</string>
    <string name="btn_verPagos">Ver Pagos</string>

    <string name="placeholder_nombre">Luis...</string>
    <string name="placeholder_apellido">Mercado...</string>
    <string name="placeholder_dni">12345678</string>
    <string name="placeholder_telefono">123456789</string>
    <string name="placeholder_email">example@example.com</string>
    <string name="flotante">Agregar inmueble</string>
    <string name="contratos_vigentes">Contratos Vigentes</string>
    <string name="text_todos">Todos</string>

    <string name="cambiar_contrasena">Cambiar Contraseña</string>

    <string name="label_anterior_password">Contraseña Anterior</string>
    <string name="label_nueva_password">Nueva Contraseña</string>
    <string name="hint_anterior_password">Ingrese contraseña actual</string>
    <string name="hint_nueva_password">Mínimo 6 caracteres</string>

    <string name="label_direccion">Dirección</string>
    <string name="label_uso">Uso</string>
    <string name="label_tipo">Tipo</string>
    <string name="label_ambientes">Ambientes</string>
    <string name="label_superficie">Superficie</string>
    <string name="label_latitud">Latitud</string>
    <string name="label_longitud">Longitud</string>
    <string name="label_precio">Precio</string>
    <string name="label_disponible">Disponible</string>
    <string name="label_contrato_vigente">Contrato Vigente</string>

    <string name="placeholder_direccion">Av Siempreviva 123</string>
    <string name="placeholder_uso">Comercial/Residencial...</string>
    <string name="placeholder_tipo">Local/Casa/Depto...</string>
    <string name="placeholder_ambientes">3</string>
    <string name="placeholder_superficie">100</string>
    <string name="placeholder_latitud">-34.123548</string>
    <string name="placeholder_longitud">-66.456784</string>
    <string name="placeholder_precio">500000</string>
    <string name="sin_pagos">No se encontraron pagos</string>
    <string name="mensage_flotante">📞 Sacudir para llamar</string>
    <string-array name="opciones_uso">
        <item>Residencial</item>
        <item>Comercial</item>
    </string-array>

    <string-array name="opciones_tipo">
        <item>Casa</item>
        <item>Departamento</item>
        <item>Local</item>
        <item>Depósito</item>
    </string-array>
</resources>
