<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.inmueble.InmuebleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingTop="10dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/ivImagenInmueble"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_view_item_transform_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/inmueble_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_direccion"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivImagenInmueble" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/placeholder_direccion"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/colorText"
            android:textColorHint="#88FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelDireccion" />

        <TextView
            android:id="@+id/labelUso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_uso"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDireccion" />

        <Spinner
            android:id="@+id/SpinnerUso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:entries="@array/opciones_uso" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelUso" />

        <TextView
            android:id="@+id/labelTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_tipo"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SpinnerUso" />

        <Spinner
            android:id="@+id/SpinnerTipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:entries="@array/opciones_tipo" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelTipo" />

        <TextView
            android:id="@+id/labelAmbientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_ambientes"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SpinnerTipo" />

        <EditText
            android:id="@+id/etAmbientes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/placeholder_ambientes"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/colorText"
            android:textColorHint="#88FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/etSuperficie"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelAmbientes" />

        <TextView
            android:id="@+id/labelSuperficie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_superficie"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="@+id/etSuperficie"
            app:layout_constraintTop_toTopOf="@+id/labelAmbientes" />

        <EditText
            android:id="@+id/etSuperficie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/placeholder_superficie"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/colorText"
            android:textColorHint="#88FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etAmbientes"
            app:layout_constraintTop_toBottomOf="@+id/labelSuperficie" />

        <TextView
            android:id="@+id/labelLatitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_latitud"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAmbientes" />

        <EditText
            android:id="@+id/etLatitud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/placeholder_latitud"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColor="@color/colorText"
            android:textColorHint="#88FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/etLongitud"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelLatitud" />

        <TextView
            android:id="@+id/labelLongitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_longitud"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="@+id/etLongitud"
            app:layout_constraintTop_toTopOf="@+id/labelLatitud" />

        <EditText
            android:id="@+id/etLongitud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/placeholder_longitud"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColor="@color/colorText"
            android:textColorHint="#88FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etLatitud"
            app:layout_constraintTop_toBottomOf="@+id/labelLongitud" />

        <TextView
            android:id="@+id/labelPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_precio"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLatitud" />

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/placeholder_precio"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColor="@color/colorText"
            android:textColorHint="#88FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelPrecio" />

        <CheckBox
            android:id="@+id/cbDisponible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:enabled="false"
            android:text="@string/label_disponible"
            android:textColor="@color/colorText"
            app:buttonTint="@color/checkbox_selector"
            app:layout_constraintEnd_toStartOf="@+id/cbContratoVigente"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPrecio" />

        <CheckBox
            android:id="@+id/cbContratoVigente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/label_contrato_vigente"
            android:textColor="@color/colorText"
            app:buttonTint="@color/checkbox_selector"
            app:layout_constraintBottom_toBottomOf="@+id/cbDisponible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cbDisponible"
            app:layout_constraintTop_toTopOf="@+id/cbDisponible" />

        <Button
            android:id="@+id/btnEditarInmueble"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="12dp"
            android:text="@string/btn_editar"
            android:textColor="@color/colorText"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbDisponible" />

        <Button
            android:id="@+id/btnGuardarInmueble"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="12dp"
            android:text="@string/btn_guardar"
            android:textColor="@color/colorText"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbDisponible" />

        <Button
            android:id="@+id/btnCrearInmueble"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="12dp"
            android:text="@string/btn_crear"
            android:textColor="@color/colorText"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbDisponible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>